--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,17 @@
+
 services:
   db:
     container_name: postgres_db
-
-    # TODO: 
-    # define image (if our container is named postgres_db... i wonder... use 16 as the version.)
-    # define ports (postgres default port is 5432)
-    # define environment (POSTGRES_USER, POSTGRES_PASSWORD, and POSTGRES_DB (can be found in the code)
-    # create and attach a volume to /var/lib/postgresql/data
-
+    image: postgres:15
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydb
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     # given: healthcheck
     # basically just checks that postgres is up and ready
     healthcheck:
@@ -32,11 +36,14 @@ services:
       # (DB_HOST (the name of the service our db is in)
       #, DB_PORT, DB_USER, DB_PASSWORD, DB_NAME, 
       # and (this container's) PORT 8080)
+    ports:
+          - "8080:8080"
+    environment:
+        DB_HOST: db
+        DB_PORT: 5432
+        DB_USER: user
+        DB_PASSWORD: password
+        DB_NAME: mydb
 
-    # TODO: 
-      # set our app to run on port 8080
-
-
-# TODO: 
-# define a volume at the highest level
-# should be same name as the volume you defined for DB
+volumes:
+  pgdata:
